syntax = "proto3";

package sample;

option go_package = "github.com/hojin-kr/fiber-grpc/proto/sample;proto/sample";

message Request {
    int64 a = 1;
    int64 b = 2;
}

message Response {
    int64 result = 1;
}

message RequestSignedURL {
    string filename = 1;
    string contentType = 2;
    int64 size = 3;
}

message ResponseSignedURL {
    string url = 1;
}

service AddService {
    rpc Add(Request) returns (Response);
    rpc Multiply(Request) returns (Response);
    rpc DataStore(Request) returns (Response);
    rpc CloudStorage(RequestSignedURL) returns (ResponseSignedURL);
}